[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirror-mcp"
version = "4.1.8"
description = "Mirror AI MCP Client SDK — Connect to 100+ crypto intelligence tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Glass Lane Pty Ltd", email = "info@glasslane.io"},
]
keywords = ["mcp", "crypto", "blockchain", "ai", "mirror", "glasslane"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://mirror.glasslane.io"
Documentation = "https://mirror.glasslane.io/docs"
Repository = "https://github.com/glasslane-io/mirror-mcp-sdk"
"Bug Tracker" = "https://github.com/glasslane-io/mirror-mcp-sdk/issues"
"Mirror AI Platform" = "https://mirror.glasslane.io"

[project.scripts]
mirror-mcp = "mirror_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mirror_mcp"]
